--- a/build-Controle_Estoque-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/Makefile
+++ b/build-Controle_Estoque-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/Makefile
@@ -248,6 +248,7 @@ Makefile: ../Controle_Estoque/Controle_Estoque.pro ../../../Qt/5.14.2/mingw73_64
 		../../../Qt/5.14.2/mingw73_64/mkspecs/features/qt_config.prf \
 		../../../Qt/5.14.2/mingw73_64/mkspecs/win32-g++/qmake.conf \
 		../../../Qt/5.14.2/mingw73_64/mkspecs/features/spec_post.prf \
+		.qmake.stash \
 		../../../Qt/5.14.2/mingw73_64/mkspecs/features/exclusive_builds.prf \
 		../../../Qt/5.14.2/mingw73_64/mkspecs/features/toolchain.prf \
 		../../../Qt/5.14.2/mingw73_64/mkspecs/features/default_pre.prf \
@@ -274,9 +275,9 @@ Makefile: ../Controle_Estoque/Controle_Estoque.pro ../../../Qt/5.14.2/mingw73_64
 		../Controle_Estoque/Controle_Estoque.pro \
 		../../../Qt/5.14.2/mingw73_64/lib/Qt5Widgets.prl \
 		../../../Qt/5.14.2/mingw73_64/lib/Qt5Gui.prl \
+		../../../Qt/5.14.2/mingw73_64/lib/Qt5Sql.prl \
 		../../../Qt/5.14.2/mingw73_64/lib/Qt5Core.prl \
 		../../../Qt/5.14.2/mingw73_64/lib/qtmain.prl \
-		.qmake.stash \
 		../../../Qt/5.14.2/mingw73_64/mkspecs/features/build_pass.prf \
 		../Controle_Estoque/Recursos.qrc
 	$(QMAKE) -o Makefile ..\Controle_Estoque\Controle_Estoque.pro -spec win32-g++ "CONFIG+=debug" "CONFIG+=qml_debug"
@@ -458,6 +459,7 @@ Makefile: ../Controle_Estoque/Controle_Estoque.pro ../../../Qt/5.14.2/mingw73_64
 ../../../Qt/5.14.2/mingw73_64/mkspecs/features/qt_config.prf:
 ../../../Qt/5.14.2/mingw73_64/mkspecs/win32-g++/qmake.conf:
 ../../../Qt/5.14.2/mingw73_64/mkspecs/features/spec_post.prf:
+.qmake.stash:
 ../../../Qt/5.14.2/mingw73_64/mkspecs/features/exclusive_builds.prf:
 ../../../Qt/5.14.2/mingw73_64/mkspecs/features/toolchain.prf:
 ../../../Qt/5.14.2/mingw73_64/mkspecs/features/default_pre.prf:
@@ -484,9 +486,9 @@ Makefile: ../Controle_Estoque/Controle_Estoque.pro ../../../Qt/5.14.2/mingw73_64
 ../Controle_Estoque/Controle_Estoque.pro:
 ../../../Qt/5.14.2/mingw73_64/lib/Qt5Widgets.prl:
 ../../../Qt/5.14.2/mingw73_64/lib/Qt5Gui.prl:
+../../../Qt/5.14.2/mingw73_64/lib/Qt5Sql.prl:
 ../../../Qt/5.14.2/mingw73_64/lib/Qt5Core.prl:
 ../../../Qt/5.14.2/mingw73_64/lib/qtmain.prl:
-.qmake.stash:
 ../../../Qt/5.14.2/mingw73_64/mkspecs/features/build_pass.prf:
 ../Controle_Estoque/Recursos.qrc:
 qmake: FORCE
